--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,9 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+#paris {
+    background-color: #fe215d;
+}
+#florida {
+    background-color: #f1241a;
+}
